# amethyst

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE.md  Makefile  PKGBUILD  README.html  README.md  ame.toml  amethyst.install  build.rs  config.toml  flake.nix  index.html?v=5&type=search&arg=neofetch  main.rs  run-isolated.sh  wget-log  wget-log.1  wget-log.2  wget-log.3  wget-log.4  wget-log.5  wget-log.6  wget-log.7  wget-log.8
.VSCodeCounter/2021-11-26_22-26-06/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-11-26_22-29-12/: details.md  results.csv  results.md  results.txt
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
.nix/: default.nix
docs/: CONFIG.md
i18n/de/: Amethyst.ftl
i18n/en/: Amethyst.ftl
i18n/en-US/: Amethyst.ftl
i18n/es/: Amethyst.ftl
i18n/fr/: Amethyst.ftl
i18n/it/: Amethyst.ftl
i18n/pl/: Amethyst.ftl
i18n/sv/: Amethyst.ftl
src/: args.rs  clearcache.rs  clone.rs  error.rs  help.rs  main.rs  mods.rs  search.rs  uninstall.rs  upgrade.rs
src/builder/: git.rs  makepkg.rs  mod.rs  paccache.rs  pacdiff.rs  pacman.rs  pager.rs  rm.rs
src/database/: add.rs  initialise.rs  mod.rs  query.rs  remove.rs
src/interact/: macros.rs  mod.rs  multi_select.rs  paging.rs  prompt.rs  select.rs  theme.rs
src/internal/: alpm.rs  clean.rs  commands.rs  config.rs  dependencies.rs  detect.rs  error.rs  exit_code.rs  fs_utils.rs  i18n.rs  initialise.rs  mod.rs  pacman_db.rs  rpc.rs  sort.rs  strings.rs  structs.rs  sudoloop.rs  utils.rs
src/logging/: fmt_builder.rs  fmt_layer.rs  handler.rs  mod.rs  output.rs  piped_stdio.rs  printable.rs
src/mods/: clearcache.rs  clone.rs  config.rs  database.rs  flatpak.rs  help.rs  inssort.rs  install.rs  purge.rs  rpc.rs  search.rs  snap.rs  stat_database.rs  statpkgs.rs  strs.rs  uninstall.rs  update.rs  upgrade.rs  ver.rs  xargs.rs
src/operations/: aur_install.rs  clean.rs  install.rs  mod.rs  search.rs  uninstall.rs  upgrade.rs
src/operations/aur_install/: aur_dependency_installation.rs  aur_download.rs  aur_fetch.rs  aur_package_install.rs  aur_review.rs  common.rs  make_dependency_removal.rs  mod.rs  repo_dependency_installation.rs
src/wrapper/: pacman.rs
